# BeCeeded

./: .gitignore  Cargo.toml  README.md
benches/: parser_benchmark.rs  scanner_benchmarks.rs
src/: db.rs  interactive.rs  lib.rs  logger.rs  main.rs  memory.rs  mnemonic.rs  ocr.rs  parser.rs  scanner.rs  wallet.rs
tests/: interactive_tests.rs  parser_mnemonic_integration.rs  scanner_tests.rs
